2006-06-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c (cmdListFunctions): fixed bugs 1181163 and
	  1208515

2006-06-13 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/port.h (struct PORT): added field gp_tags, to hold the tag
	value of generic pointers,
	* src/avr/main.c,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/izt/i186.c,
	  src/izt/tlcs900h.c,
	  src/mcs51/main.c,
	  src/pic/main.c,
	  src/pic16/main.c,
	  src/xa51/main.c,
	  src/z80/main.c: PORT structure, added elements for gp_tags field,
	* src/SDCCsymt.h: replaced hardwired values of GPTYPE_* macros with
	fields in the PORT structure of each port,
	* src/SDCCast.c (decorateType): allow processing of generic pointers
	for PIC16 port (FPTRSIZE equals GPTRSIZE), also set GPTYPE_NEAR for
	S_FIXED symbols

2006-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* link/z80/lkgb.c,
	* link/z80/lkgg.c,
	* src/pic16/gen.c,
	* src/pic16/main.c,
	* src/pic16/pcode.c,
	* src/pic/main.c,
	* src/pic/pcoderegs.c,
	* src/SDCCicode.c,
	* src/SDCCmain.c,
	* src/SDCCsymt.c: replaced all exit(-1) by exit(EXIT_FAILURE) to fix
	  bug 1504689 on minGW

2006-06-12 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/printf_tiny.c: fixed bug #1465675 (%x format specifier)

2006-06-12 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (backPatchLabels): fixed bug #1504636

2006-06-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c (OUTPUT_CHAR, _output_char): added and used
	  for optimization

2006-06-11 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/gen.c (genCast): fixed bug with assignment of a pointer
	to a char variable. Fixed bug #1504211
	* device/include/pic16/adc.h,
	device/include/lib/pic16/libio/adc/adcopen.c: applied patch #1364387
	and fixed bug #1364390

2006-06-10 Borut Razem <borut.razem AT siol.net>

	* CVSROOT: removed the CVS left-over

2006-06-10 Maarten Brock <sourceforge.brock AT dse.nl>
